==> RT-Thread/rt-thread/bsp/n32/n32hxxx/libraries/N32_Drivers/drivers/drv_usart.c <==
#include "board.h"
#include "drv_usart.h"
#include "drv_config.h"
#define LOG_TAG             "drv.usart"
#include <drv_log.h>

static void uart_isr(struct rt_serial_device *serial)
{
    struct n32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    uart = rt_container_of(serial, struct n32_uart, serial);

    /* UART in mode Receiver */
    if ((USART_GetFlagStatus(uart->config->Instance, USART_FLAG_RXDNE) != RESET) &&
            (USART_GetIntStatus(uart->config->Instance, USART_INT_RXDNE) != RESET))
    {
        rt_hw_serial_isr(serial, RT_SERIAL_EVENT_RX_IND);
    }
#ifdef RT_SERIAL_USING_DMA
    else if ((uart->uart_dma_flag) &&
             (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_IDLEF) != RESET) &&
             (USART_GetIntStatus(uart->config->Instance, USART_INT_IDLEF) != RESET))
    {
        dma_recv_callback(serial, UART_RX_DMA_IT_IDLE_FLAG);
        USART_GetFlagStatus(uart->config->Instance, USART_FLAG_IDLEF);
        USART_ReceiveData(uart->config->Instance);
    }
    else if ((USART_GetFlagStatus(uart->config->Instance, USART_FLAG_TXC) != RESET) &&
             (USART_GetIntStatus(uart->config->Instance, USART_INT_TXC) != RESET))
    {
        USART_ClrFlag(uart->config->Instance, USART_FLAG_TXC);
    }
#endif
    else
    {
        if ((USART_GetFlagStatus(uart->config->Instance, USART_FLAG_OREF) != RESET) ||
                (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_NEF) != RESET)  ||
                (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_FEF) != RESET)  ||
                (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_PEF) != RESET))
        {
            USART_GetFlagStatus(uart->config->Instance, USART_FLAG_OREF | USART_FLAG_NEF | USART_FLAG_FEF | USART_FLAG_PEF);
            USART_ReceiveData(uart->config->Instance);
        }
        if (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_LINBD) != RESET)
        {
            USART_ClrFlag(uart->config->Instance, USART_FLAG_LINBD);
        }

        if (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_CTSF) != RESET)
        {
            USART_ClrFlag(uart->config->Instance, USART_FLAG_CTSF);
        }

        if (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_TXDE) != RESET)
        {
            USART_ClrFlag(uart->config->Instance, USART_FLAG_CTSF);
        }
        if (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_RXDNE) != RESET)
        {
            USART_ClrFlag(uart->config->Instance, USART_FLAG_RXDNE);
        }
    }
}

int rt_hw_usart_init(void)
{
    struct serial_configure config = RT_SERIAL_CONFIG_DEFAULT;
    rt_err_t result = 0;

    n32_uart_get_dma_config();

    for (rt_size_t i = 0; i < sizeof(uart_obj) / sizeof(struct n32_uart); i++)
    {
        /* init UART object */
        uart_obj[i].config        = &uart_config[i];
        uart_obj[i].serial.ops    = &n32_uart_ops;
        uart_obj[i].serial.config = config;

#ifdef RT_SERIAL_USING_DMA
        if (uart_obj[i].uart_dma_flag & RT_DEVICE_FLAG_DMA_TX)
        {
#if defined(SOC_SERIES_N32H7xx)
            /* Configure the UART TX DMA for Transmission process */
            /* Enable DMA clock */
            RCC_EnableAHB1PeriphClk3(uart_obj[i].config->dma_tx->dma_rcc, ENABLE);
            /* Enable DMA MUXclock  */
            RCC_EnableAHB1PeriphClk1(RCC_AHB1_PERIPHEN_M7_DMAMUX1, ENABLE);

            /*  UART TX DMA Channel1 configuration ---------------------------------------------*/
            DMA_ChannelStructInit(&uart_obj[i].dma.TX_DMA_ChInitStr);
            uart_obj[i].dma.TX_DMA_ChInitStr.IntEn              = 0x1U;
            uart_obj[i].dma.TX_DMA_ChInitStr.DstAddr            = (uint32_t)&uart_obj[i].config->Instance->DAT;
            uart_obj[i].dma.TX_DMA_ChInitStr.SrcAddr            = NULL;
            uart_obj[i].dma.TX_DMA_ChInitStr.SrcTfrWidth        = DMA_CH_TRANSFER_WIDTH_8;
            uart_obj[i].dma.TX_DMA_ChInitStr.DstTfrWidth        = DMA_CH_TRANSFER_WIDTH_8;
            uart_obj[i].dma.TX_DMA_ChInitStr.DstAddrCountMode   = DMA_CH_ADDRESS_COUNT_MODE_NO_CHANGE;
            uart_obj[i].dma.TX_DMA_ChInitStr.SrcAddrCountMode   = DMA_CH_ADDRESS_COUNT_MODE_INCREMENT;
            uart_obj[i].dma.TX_DMA_ChInitStr.DstBurstLen        = DMA_CH_BURST_LENGTH_1;
            uart_obj[i].dma.TX_DMA_ChInitStr.SrcBurstLen        = DMA_CH_BURST_LENGTH_1;
            uart_obj[i].dma.TX_DMA_ChInitStr.SrcGatherEn        = 0x0U;
            uart_obj[i].dma.TX_DMA_ChInitStr.DstScatterEn       = 0x0U;
            uart_obj[i].dma.TX_DMA_ChInitStr.TfrTypeFlowCtrl    = DMA_CH_TRANSFER_FLOW_M2P_DMA;
            uart_obj[i].dma.TX_DMA_ChInitStr.BlkTfrSize         = 0U;
            uart_obj[i].dma.TX_DMA_ChInitStr.pLinkListItem      = NULL;
            uart_obj[i].dma.TX_DMA_ChInitStr.SrcGatherInterval  = 0x0U;
            uart_obj[i].dma.TX_DMA_ChInitStr.SrcGatherCount     = 0x0U;
            uart_obj[i].dma.TX_DMA_ChInitStr.DstScatterInterval = 0x0U;
            uart_obj[i].dma.TX_DMA_ChInitStr.DstScatterCount    = 0x0U;
            uart_obj[i].dma.TX_DMA_ChInitStr.TfrType            = DMA_CH_TRANSFER_TYPE_SINGLE_BLOCK;
            uart_obj[i].dma.TX_DMA_ChInitStr.ChannelPriority    = DMA_CH_PRIORITY_7;
            uart_obj[i].dma.TX_DMA_ChInitStr.SrcHandshaking     = DMA_CH_SRC_HANDSHAKING_SOFTWARE;
            uart_obj[i].dma.TX_DMA_ChInitStr.DstHandshaking     = DMA_CH_DST_HANDSHAKING_HARDWARE;
            uart_obj[i].dma.TX_DMA_ChInitStr.DstHsInterface     = uart_obj[i].config->dma_tx->HsInterface;

            /* DMA controller must be enabled before initializing the channel */
            DMA_ControllerCmd(uart_obj[i].config->dma_tx->Instance, ENABLE);

            /* Initialize the specified DMA channel and Whether the specified channel was successfully initialized */
            if (DMA_ChannelInit(uart_obj[i].config->dma_tx->Instance, &uart_obj[i].dma.TX_DMA_ChInitStr, uart_obj[i].config->dma_tx->dma_channel) == 0U)
            {
                /* Configure DMAMUX */
                DMAMUX_SetRequestID(DMAMUX1_ID, uart_obj[i].config->dma_tx->dmamux_channel, uart_obj[i].config->dma_tx->dmamux_request);

                uart_obj[i].dma.DMA_Tx_Init = RT_TRUE;

                /* enable dma irq */
                NVIC_SetPriority(uart_obj[i].config->dma_tx->dma_irq, NVIC_EncodePriority(NVIC_GetPriorityGrouping(), 0, 0));
                NVIC_EnableIRQ(uart_obj[i].config->dma_tx->dma_irq);
            }
            else
            {
                LOG_E("%s TX DMA channel initialization failed!", uart_obj[i].config->name);
                return -RT_ERROR;
            }
#endif
        }

        if (uart_obj[i].uart_dma_flag & RT_DEVICE_FLAG_DMA_RX)
        {
#if defined(SOC_SERIES_N32H7xx)
            /* Calculate the number of blocks */
            if ((uart_obj[i].serial.config.bufsz % DMA_BLOCK_SIZE) != 0)
            {
                uart_obj[i].dma.rx_dma.block_num = uart_obj[i].serial.config.bufsz / DMA_BLOCK_SIZE + 1;

                /* Calculate the remain length */
                uart_obj[i].dma.rx_dma.remain_len = ((uart_obj[i].serial.config.bufsz > DMA_BLOCK_SIZE) ?
                                                     (uart_obj[i].serial.config.bufsz - DMA_BLOCK_SIZE * (uart_obj[i].dma.rx_dma.block_num - 1U)) :
                                                     uart_obj[i].serial.config.bufsz);
            }
            else
            {
                uart_obj[i].dma.rx_dma.block_num = uart_obj[i].serial.config.bufsz / DMA_BLOCK_SIZE;

                /* Calculate the remain length */
                uart_obj[i].dma.rx_dma.remain_len = 0;
            }

            /* Request a LinkList address */
            uart_obj[i].dma.rx_dma.Read_LinkList = (DMA_LinkListItemType *)rt_malloc(sizeof(DMA_LinkListItemType) * uart_obj[i].dma.rx_dma.block_num);
            if (uart_obj[i].dma.rx_dma.Read_LinkList == RT_NULL)
            {
                return -RT_ERROR;
            }

            /* Configure the UART RX DMA for Transmission process */
            /* Enable DMA clock */
            RCC_EnableAHB1PeriphClk3(uart_obj[i].config->dma_rx->dma_rcc, ENABLE);
            /* Enable DMA MUXclock  */
            RCC_EnableAHB1PeriphClk1(RCC_AHB1_PERIPHEN_M7_DMAMUX1, ENABLE);

            /*  UART RX DMA Channel1 configuration ---------------------------------------------*/
            DMA_ChannelStructInit(&uart_obj[i].dma.RX_DMA_ChInitStr);
            uart_obj[i].dma.RX_DMA_ChInitStr.IntEn              = 0x1U;
            uart_obj[i].dma.RX_DMA_ChInitStr.SrcAddr            = (uint32_t)&uart_obj[i].config->Instance->DAT;
            uart_obj[i].dma.RX_DMA_ChInitStr.DstAddr            = NULL;
            uart_obj[i].dma.RX_DMA_ChInitStr.SrcTfrWidth        = DMA_CH_TRANSFER_WIDTH_8;
            uart_obj[i].dma.RX_DMA_ChInitStr.DstTfrWidth        = DMA_CH_TRANSFER_WIDTH_8;
            uart_obj[i].dma.RX_DMA_ChInitStr.DstAddrCountMode   = DMA_CH_ADDRESS_COUNT_MODE_INCREMENT;
            uart_obj[i].dma.RX_DMA_ChInitStr.SrcAddrCountMode   = DMA_CH_ADDRESS_COUNT_MODE_NO_CHANGE;
            uart_obj[i].dma.RX_DMA_ChInitStr.DstBurstLen        = DMA_CH_BURST_LENGTH_1;
            uart_obj[i].dma.RX_DMA_ChInitStr.SrcBurstLen        = DMA_CH_BURST_LENGTH_1;
            uart_obj[i].dma.RX_DMA_ChInitStr.SrcGatherEn        = 0x0U;
            uart_obj[i].dma.RX_DMA_ChInitStr.DstScatterEn       = 0x0U;
            uart_obj[i].dma.RX_DMA_ChInitStr.TfrTypeFlowCtrl    = DMA_CH_TRANSFER_FLOW_P2M_DMA;
            uart_obj[i].dma.RX_DMA_ChInitStr.BlkTfrSize         = DMA_BLOCK_SIZE;
            uart_obj[i].dma.RX_DMA_ChInitStr.pLinkListItem      = uart_obj[i].dma.rx_dma.Read_LinkList;
            uart_obj[i].dma.RX_DMA_ChInitStr.SrcGatherInterval  = 0x0U;
            uart_obj[i].dma.RX_DMA_ChInitStr.SrcGatherCount     = 0x0U;
            uart_obj[i].dma.RX_DMA_ChInitStr.DstScatterInterval = 0x0U;
            uart_obj[i].dma.RX_DMA_ChInitStr.DstScatterCount    = 0x0U;
            uart_obj[i].dma.RX_DMA_ChInitStr.TfrType            = DMA_CH_TRANSFER_TYPE_MULTI_BLOCK_SRCADR_RELOAD_DSTADR_LINKED;
            uart_obj[i].dma.RX_DMA_ChInitStr.ChannelPriority    = DMA_CH_PRIORITY_7;
            uart_obj[i].dma.RX_DMA_ChInitStr.SrcHandshaking     = DMA_CH_SRC_HANDSHAKING_HARDWARE;
            uart_obj[i].dma.RX_DMA_ChInitStr.DstHandshaking     = DMA_CH_DST_HANDSHAKING_SOFTWARE;
            uart_obj[i].dma.RX_DMA_ChInitStr.SrcHsInterface     = uart_obj[i].config->dma_rx->HsInterface;

            /* Set LLI control information */
            for (rt_size_t j = 0; j < uart_obj[i].dma.rx_dma.block_num; j++)
            {
                /* Link List Config */
                uart_obj[i].dma.rx_dma.Read_LinkList[j].IntEn            = 0x1U;
                uart_obj[i].dma.rx_dma.Read_LinkList[j].SrcAddr          = (uint32_t)&uart_obj[i].config->Instance->DAT;
                uart_obj[i].dma.rx_dma.Read_LinkList[j].DstAddr          = NULL;
                uart_obj[i].dma.rx_dma.Read_LinkList[j].SrcTfrWidth      = DMA_CH_TRANSFER_WIDTH_8;
                uart_obj[i].dma.rx_dma.Read_LinkList[j].DstTfrWidth      = DMA_CH_TRANSFER_WIDTH_8;
                uart_obj[i].dma.rx_dma.Read_LinkList[j].DstAddrCountMode = DMA_CH_ADDRESS_COUNT_MODE_INCREMENT;
                uart_obj[i].dma.rx_dma.Read_LinkList[j].SrcAddrCountMode = DMA_CH_ADDRESS_COUNT_MODE_NO_CHANGE;
                uart_obj[i].dma.rx_dma.Read_LinkList[j].DstBurstLen      = DMA_CH_BURST_LENGTH_1;
                uart_obj[i].dma.rx_dma.Read_LinkList[j].SrcBurstLen      = DMA_CH_BURST_LENGTH_1;
                uart_obj[i].dma.rx_dma.Read_LinkList[j].SrcGatherEn      = false;
                uart_obj[i].dma.rx_dma.Read_LinkList[j].DstScatterEn     = false;
                uart_obj[i].dma.rx_dma.Read_LinkList[j].TfrTypeFlowCtrl  = DMA_CH_TRANSFER_FLOW_P2M_DMA;
                uart_obj[i].dma.rx_dma.Read_LinkList[j].BlkTfrSize       = DMA_BLOCK_SIZE;
                uart_obj[i].dma.rx_dma.Read_LinkList[j].DstLinkedListEn  = true;
                uart_obj[i].dma.rx_dma.Read_LinkList[j].SrcLinkedListEn  = false;

                /* The last block, so need to link to first block */
                if ((j + 1U) == uart_obj[i].dma.rx_dma.block_num)
                {
                    uart_obj[i].dma.rx_dma.Read_LinkList[j].pNext = &uart_obj[i].dma.rx_dma.Read_LinkList[0U];
                }
                else
                {
                    uart_obj[i].dma.rx_dma.Read_LinkList[j].pNext = &uart_obj[i].dma.rx_dma.Read_LinkList[j + 1U];
                }

                /* The last block and block size ≠ BLOCK_SIZE */
                if ((j + 1U) == uart_obj[i].dma.rx_dma.block_num && uart_obj[i].dma.rx_dma.remain_len != 0U)
                {
                    uart_obj[i].dma.rx_dma.Read_LinkList[j].BlkTfrSize = uart_obj[i].dma.rx_dma.remain_len;
                }
            }

            /* DMA controller must be enabled before initializing the channel */
            DMA_ControllerCmd(uart_obj[i].config->dma_rx->Instance, ENABLE);
#endif
        }
#endif /* RT_SERIAL_USING_DMA */

        /* register UART device */
        result = rt_hw_serial_register(&uart_obj[i].serial, uart_obj[i].config->name,
                                       RT_DEVICE_FLAG_RDWR
                                       | RT_DEVICE_FLAG_INT_RX
                                       | RT_DEVICE_FLAG_INT_TX
                                       | uart_obj[i].uart_dma_flag
                                       , NULL);
        RT_ASSERT(result == RT_EOK);
    }

    return result;
}
