==> RT-Thread/rt-thread/bsp/airm2m/air32f103/libraries/rt_drivers/drv_usart.c <==
#include <rtthread.h>
#include <rtdevice.h>
#include "board.h"
#include "drv_usart.h"
#define LOG_TAG             "drv.usart"
#include <drv_log.h>
#define UART1_CONFIG                                                \
    {                                                               \
        .name = "uart1",                                            \
        .Instance = USART1,                                         \
        .irq_type = USART1_IRQn,                                    \
    }
#define UART2_CONFIG                                                \
    {                                                               \
        .name = "uart2",                                            \
        .Instance = USART2,                                         \
        .irq_type = USART2_IRQn,                                    \
    }
#define UART3_CONFIG                                                \
    {                                                               \
        .name = "uart3",                                            \
        .Instance = USART3,                                         \
        .irq_type = USART3_IRQn,                                    \
    }

static void uart_isr(struct rt_serial_device *serial)
{
    struct air32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    uart = rt_container_of(serial, struct air32_uart, serial);

    /* UART in mode Receiver -------------------------------------------------*/

    if ((USART_GetITStatus(uart->config->Instance, USART_IT_RXNE) != RESET) && (RESET != USART_GetFlagStatus(uart->config->Instance, USART_FLAG_RXNE)))
    {
        rt_hw_serial_isr(serial, RT_SERIAL_EVENT_RX_IND);
        USART_ClearITPendingBit(uart->config->Instance, USART_IT_RXNE);
        USART_ClearFlag(uart->config->Instance, USART_FLAG_RXNE);
    }
    else
    {
        if (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_CTS) != RESET)
        {
            USART_ClearFlag(uart->config->Instance, USART_FLAG_CTS);
        }

        if (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_LBD) != RESET)
        {
            USART_ClearFlag(uart->config->Instance, USART_FLAG_LBD);
        }

        if (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_TC) != RESET)
        {
            USART_ClearFlag(uart->config->Instance, USART_FLAG_TC);
        }
    }

}

int rt_hw_usart_init(void)
{
    struct serial_configure config = RT_SERIAL_CONFIG_DEFAULT;
    rt_err_t result = 0;

    for (rt_size_t i = 0; i < sizeof(uart_obj) / sizeof(struct air32_uart); i++)
    {
        /* init UART object */
        uart_obj[i].config = &uart_config[i];
        uart_obj[i].serial.ops    = &air32_uart_ops;
        uart_obj[i].serial.config = config;

        /* register UART device */
        result = rt_hw_serial_register(&uart_obj[i].serial, uart_obj[i].config->name,
                                       RT_DEVICE_FLAG_RDWR
                                       | RT_DEVICE_FLAG_INT_RX
                                       | RT_DEVICE_FLAG_INT_TX
                                       , RT_NULL);
        RT_ASSERT(result == RT_EOK);
    }

    return result;
}
